syntax = "proto3";

option go_package = "github.com/PCBZ/CS6650-Project/services/timeline-service/proto/socialgraph";

package socialgraph;

service SocialGraphService {
  rpc GetFollowingList(GetFollowingListRequest) returns (GetFollowingListResponse);
}

message GetFollowingListRequest {
  int64 user_id = 1;                  // Required: User ID to get following list for
}

message GetFollowingListResponse {
  repeated int64 following_user_ids = 1; // List of user IDs that this user follows
  string error_code = 2;              // Error code if request failed
  string error_message = 3;           // Error message if request failed
}